update font config

--- a/kitty.conf
+++ b/kitty.conf
@@ -4,7 +4,7 @@ include colors.conf
 
 font_size 16
 
-font_family FiraCode Nerd Font Mono
+font_family FiraCode Nerd Font Mono Light
 
 bold_font FiraCode Nerd Font Mono Bold
 
